# goit-pythonweb-hw-12

./: .coverage  .gitignore  docker-compose.yml  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 95e847cce4e3_add_created_at_and_updated_at_to_.py  977b30328db9_add_confirmed_field_to_users.py  bc27b61d3bcd_add_user.py  c3eb10dff691_fix_missing_revision.py  f544f814eb7b_add_to_model_user_filed_confirmed.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619
postgres-data/base/13468/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13468.stat  global.stat
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
tests/: test_contact_repository_unit.py  test_contacts_services_unit.py  test_email_services_unit.py  test_integration_auth.py  test_integration_contact.py  test_integration_users.py  test_upload_file_services_unit.py  test_users_reposetory_unit.py  test_users_services_unit.py
